--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Generated train data
+nelegolizer/nn/data/generated/*.csv
+nelegolizer/nn/data/generated/111/*
+!.gitkeep
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
