--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,23 @@
-# Python CircleCI 2.0 configuration file
-version: 2
+version: 2.1
+
+# Define the jobs we want to run for this project
 jobs:
   build:
     docker:
-      - image: circleci/python:3.8
-
-    working_directory: ~/repo
-
+      - image: cimg/base:2023.03
     steps:
-      # Step 1: obtain repo from GitHub
       - checkout
-      # Step 2: create virtual env and install dependencies
-      - run:
-          name: install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-      # Step 3: run linter and tests
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            cd tests/unit
-            python3 -m unittest discover
+      - run: echo "this is the build job"
+  test:
+    docker:
+      - image: cimg/base:2023.03
+    steps:
+      - checkout
+      - run: echo "this is the test job"
+
+# Orchestrate our job run sequence
+workflows:
+  build_and_test:
+    jobs:
+      - build
+      - test
