Add install dependencies to CI configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,12 @@ jobs:
     steps:
       - checkout
       - run: echo "this is the build job"
+      - run:
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
   test:
     docker:
       - image: cimg/base:2023.03
