--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,10 @@ jobs:
       - run: echo "this is the build job"
       - run:
           name: install python3.10-venv
-          command: sudo apt install python3.10-venv
+          command: |
+            sudo apt update
+            sudo apt upgrade
+            sudo apt install python3.10-venv
       - run:
           name: install dependencies
           command: |
