--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/base:2023.03
+      - image: cimg/python:3.8.0
     steps:
       - checkout
       - run: echo "this is the build job"
