--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,11 @@ jobs:
       - run:
           name: unit tests
           command: |
-            cd tests/unit
-            python3 -m unittest discover
+            python3 -m unittest discover -s tests/unit/
+      - run:
+          name: integration tests
+          command: |
+            python3 -m unittest discover -s tests/integration/
 
 # Orchestrate our job run sequence
 workflows:
