--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -19,6 +19,8 @@ jobs:
     - name: Hello
       run: |
         echo "Hello"
+        ls -l
+        pwd
     - name: Lint with flake8
       run: |
         source ../.venv/bin/activate
