--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -18,8 +18,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Hello
       run: |
-        echo "Hello"
+        echo "Folder files"
         ls -l
+        echo $HOME
         pwd
     - name: Lint with flake8
       run: |
