--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -28,14 +28,15 @@ jobs:
             (mkdir $HOME/.local && echo "Created $HOME/.local directory"); \
         else \
             echo "$HOME/.local directory already exists"; \
-        fi
+        fi;
         if [ ! -e $HOME/.local/nelegolizer-venv ]; then \
             python3 -m venv $HOME/.local/nelegolizer-venv; \
+            source $HOME/.local/nelegolizer-venv/bin/activate
             python3 -m pip install -r requirements.txt --no-cache-dir \
             python3 -m pip install -e . \
         else \
             echo "$HOME/.local/nelegolizer-venv already exists"; \
-        fi
+        fi;
     - name: Lint with flake8
       run: |
         source $HOME/.local/nelegolizer-venv/bin/activate
