--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -32,11 +32,11 @@ jobs:
     - name: Create $HOME/.local/nelegolizer-venv if doesn't exist
       run: |   
         if [ ! -e $HOME/.local/nelegolizer-venv ]; then \
-            {echo "Setting $HOME/.local/nelegolizer-venv..." \
+            {echo "Setting $HOME/.local/nelegolizer-venv..."; \
             python3 -m venv $HOME/.local/nelegolizer-venv; \
-            source $HOME/.local/nelegolizer-venv/bin/activate
-            python3 -m pip install -r requirements.txt --no-cache-dir \
-            python3 -m pip install -e .} \
+            source $HOME/.local/nelegolizer-venv/bin/activate;
+            python3 -m pip install -r requirements.txt --no-cache-dir; \
+            python3 -m pip install -e .}; \
         else \
             echo "$HOME/.local/nelegolizer-venv already exists"; \
         fi;
