--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -22,24 +22,8 @@ jobs:
         ls -la
         echo $HOME
         pwd
-    - name: Create $HOME/.local directory if doesn't exist
-      run: |
-        if [ ! -e $HOME/.local ]; then \
-            (mkdir $HOME/.local && echo "Created $HOME/.local directory"); \
-        else \
-            echo "$HOME/.local directory already exists"; \
-        fi;
-    - name: Create $HOME/.local/nelegolizer-venv if doesn't exist
-      run: |   
-        if [ ! -e $HOME/.local/nelegolizer-venv ]; then \
-            (echo "Setting $HOME/.local/nelegolizer-venv..."; \
-            python3 -m venv $HOME/.local/nelegolizer-venv; \
-            source $HOME/.local/nelegolizer-venv/bin/activate;
-            python3 -m pip install -r requirements.txt --no-cache-dir; \
-            python3 -m pip install -e .); \
-        else \
-            echo "$HOME/.local/nelegolizer-venv already exists"; \
-        fi;
+    - name: Create venv if doesn't exist
+      run: sh create_venv.sh
     - name: Lint with flake8
       run: |
         source $HOME/.local/nelegolizer-venv/bin/activate
