--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -20,7 +20,7 @@ jobs:
       run: sh .github/create_venv.sh
     - name: Lint with flake8
       run: |
-        source $HOME/.local/nelegolizer-venv/bin/activate
+        . .github/activate_venv.sh
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
@@ -28,5 +28,5 @@ jobs:
 
     - name: Test with pytest
       run: |
-        source $HOME/.local/nelegolizer-venv/bin/activate
+        . .github/activate_venv.sh
         pytest
