--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -8,16 +8,23 @@ on:
     branches: [ "dev", "main" ]
 
 jobs:
-  test:
-
+  create-env:
     runs-on: self-hosted
     strategy:
-      fail-fast: false
+      fail-fast: true
 
     steps:
     - uses: actions/checkout@v4
     - name: Create venv if doesn't exist
       run: sh .github/create_venv.sh
+
+  test:
+    needs: [create-env]
+    runs-on: self-hosted
+    strategy:
+      fail-fast: false
+
+    steps:
     - name: Lint with flake8
       run: |
         . .github/activate_venv.sh
