Split jobs into test and flake8

--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Create venv if doesn't exist
       run: sh .github/create_venv.sh
 
-  test:
+  flake8:
     needs: [create-env]
     runs-on: self-hosted
     strategy:
@@ -33,6 +33,13 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
+  test:
+    needs: [create-env]
+    runs-on: self-hosted
+    strategy:
+      fail-fast: false
+
+    steps:
     - name: Test with pytest
       run: |
         . .github/activate_venv.sh
